add onclick in class pro

--- a/shop.html
+++ b/shop.html
@@ -21,10 +21,10 @@
       <div>
         <ul id="navbar">
           <div class="close-menu"><i id="close" class="fa fa-times"></i></div>
-          <li><a href="index.html">Home</a></li>
+          <li><a class="active" href="index.html">Home</a></li>
           <li><a class="active" href="shop.html">Shop</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a class="active" href="about.html">About</a></li>
+          <li><a class="active" href="contact.html">Contact</a></li>
         </ul>
       </div>
       <div id="mobile">
@@ -348,11 +348,11 @@
       </div>
     </section>
 
-    <section id="pagination" class="section-p1">
+    <!--  <section id="pagination" class="section-p1">
       <a href="#">1</a>
       <a href="#">2</a>
       <a href="#"> <i class="icon-arrow-right"></i></a>
-    </section>
+    </section> -->
 
     <section id="newsletter" class="section-p1 section-m1">
       <div class="newstext">
