--- a/sproduct.html
+++ b/sproduct.html
@@ -23,8 +23,8 @@
           <div class="close-menu"><i id="close" class="fa fa-times"></i></div>
           <li><a href="index.html">Home</a></li>
           <li><a class="active" href="shop.html">Shop</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a class="active" href="about.html">About</a></li>
+          <li><a class="active" href="contact.html">Contact</a></li>
         </ul>
       </div>
       <div id="mobile">
