--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <ul id="navbar">
           <div class="close-menu"><i id="close" class="fa fa-times"></i></div>
           <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="shop.html">Shop</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a class="active" href="shop.html">Shop</a></li>
+          <li><a class="active" href="about.html">About</a></li>
+          <li><a class="active" href="contact.html">Contact</a></li>
         </ul>
       </div>
       <div id="mobile">
@@ -73,7 +73,7 @@
       <h2>Featured Products</h2>
       <p>Summer colection</p>
       <div class="pro-container">
-        <div class="pro">
+        <div class="pro" onclick="window.location.href='sproduct.html'">
           <img src="img/products/f2.jpg" alt="" />
           <div class="description">
             <span>adidas</span>
@@ -92,7 +92,7 @@
             <a href="#"><i class="icon-shopping-bag"> </i></a>
           </div>
         </div>
-        <div class="pro">
+        <div class="pro" onclick="window.location.href='sproduct.html'">
           <img src="img/products/f3.jpg" alt="" />
           <div class="description">
             <span>adidas</span>
@@ -111,7 +111,7 @@
             <a href="#"><i class="icon-shopping-bag"> </i></a>
           </div>
         </div>
-        <div class="pro">
+        <div class="pro" onclick="window.location.href='sproduct.html'">
           <img src="img/products/f4.jpg" alt="" />
           <div class="description">
             <span>adidas</span>
@@ -130,7 +130,7 @@
             <a href="#"><i class="icon-shopping-bag"> </i></a>
           </div>
         </div>
-        <div class="pro">
+        <div class="pro" onclick="window.location.href='sproduct.html'">
           <img src="img/products/f5.jpg" alt="" />
           <div class="description">
             <span>adidas</span>
