--- a/index.html
+++ b/index.html
@@ -493,6 +493,8 @@
       </div>
     </footer>
 
+    <a href="index.html" class="back-to-top"><i class="icon-arrow-up"></i></a>
+
     <script src="script.js"></script>
   </body>
 </html>
