--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="assets2/style.css" />
   </head>
   <body>
+    <div class="top" id="ola"></div>
     <section id="header">
       <a href="#"><img src="img/logo.png" class="logo" alt="" /></a>
 
@@ -22,9 +23,9 @@
         <ul id="navbar">
           <div class="close-menu"><i id="close" class="fa fa-times"></i></div>
           <li><a class="active" href="index.html">Home</a></li>
-          <li><a class="active" href="shop.html">Shop</a></li>
-          <li><a class="active" href="about.html">About</a></li>
-          <li><a class="active" href="contact.html">Contact</a></li>
+          <li><a href="shop.html">Shop</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
       <div id="mobile">
@@ -493,7 +494,9 @@
       </div>
     </footer>
 
-    <a href="index.html" class="back-to-top"><i class="icon-arrow-up"></i></a>
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <a href="#ola" class="back-to-top"><i class="icon-arrow-up"></i></a>
 
     <script src="script.js"></script>
   </body>
